Closed Bug 1316245 Opened 9 years ago Closed 8 years ago

Pass WebGL2 conformance conformance2/misc/uninitialized-test-2.html

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- disabled
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: ethlin, Assigned: ethlin)

References

()

Details

Attachments

(1 file, 3 obsolete files)

failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. failed: gl.checkFramebufferStatus(gl.FRAMEBUFFER) should be 36053. Was 36061. ...
Attached patch bind texture (obsolete) — Splinter Review
We should bind texture first before doing TexSubImage.
Attachment #8808919 - Flags: review?(jgilbert)
(In reply to Ethan Lin[:ethlin] from comment #1) > Created attachment 8808919 [details] [diff] [review] > bind texture > > We should bind texture first before doing TexSubImage. Wow, oops.
Comment on attachment 8808919 [details] [diff] [review] bind texture Review of attachment 8808919 [details] [diff] [review]: ----------------------------------------------------------------- It looks like the same issue applies to the compressed texture one, so move this scope object further up in the function please.
Attachment #8808919 - Flags: review?(jgilbert) → review-
(In reply to Jeff Gilbert [:jgilbert] from comment #3) > Comment on attachment 8808919 [details] [diff] [review] > bind texture > > Review of attachment 8808919 [details] [diff] [review]: > ----------------------------------------------------------------- > > It looks like the same issue applies to the compressed texture one, so move > this scope object further up in the function please. Okay.
Attached patch bind texture (obsolete) — Splinter Review
I move the bind function up before the compression check.
Attachment #8809295 - Flags: review?(jgilbert)
Attachment #8808919 - Attachment is obsolete: true
Attachment #8809295 - Flags: review?(jgilbert) → review+
Fix try server failures.
Attachment #8809295 - Attachment is obsolete: true
Sorry, this is the correct one.
Attachment #8812086 - Attachment is obsolete: true
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/339c60ab68e4 In ZeroTextureData, bind texture before cleaning it. r=jgilbert
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8812091 [details] [diff] [review] bind texture (carry r+: jgilbert) Approval Request Comment [Feature/Bug causing the regression]: webgl2 [User impact if declined]: [Is this code covered by automated tests?]: [Has the fix been verified in Nightly?]: [Needs manual test from QE? If yes, steps to reproduce]: [List of other uplifts needed for the feature/fix]: [Is the change risky?]: [Why is the change risky/not risky?]: [String changes made/needed]:
Attachment #8812091 - Flags: review+
Attachment #8812091 - Flags: approval-mozilla-beta?
Attachment #8812091 - Flags: approval-mozilla-aurora?
Comment on attachment 8812091 [details] [diff] [review] bind texture (carry r+: jgilbert) WebGL2 related patch. Beta51+ & Aurora52+. Should be in 51 beta 8.
Attachment #8812091 - Flags: approval-mozilla-beta?
Attachment #8812091 - Flags: approval-mozilla-beta+
Attachment #8812091 - Flags: approval-mozilla-aurora?
Attachment #8812091 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: