Bug 1316245 - In ZeroTextureData, bind texture before cleaning it. r=jgilbert a=gchang

--HG--
extra : rebase_source : 6c9db6fffb51637ac7483d9ada7a0c72bd6c00a6
extra : source : 339c60ab68e4e56aa3e772cb680ea8c7d548aaa8